--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,6 +3,8 @@ name: Deploy WebApp
 on:
   push:
     branches:
+      - dev
+      - staging
       - main
 
 jobs:
@@ -40,13 +42,14 @@ jobs:
       - name: Verify cluster connection
         run: kubectl get nodes
 
-      - name: Deploy to Development Environment
+      - name: Deploy to Development
+        if: github.ref == 'refs/heads/dev'
         run: kubectl apply -k overlays/dev
 
-      - name: Deploy to Staging Environment
-        if: github.ref == 'refs/heads/main'
+      - name: Deploy to Staging
+        if: github.ref == 'refs/heads/staging'
         run: kubectl apply -k overlays/staging
 
-      - name: Deploy to Production Environment
+      - name: Deploy to Production
         if: github.ref == 'refs/heads/main'
-        run: kubectl apply -k overlays/production
+        run: kubectl apply -k overlays/prod
