--- a/base/deployment.yaml
+++ b/base/deployment.yaml
@@ -17,3 +17,8 @@ spec:
           image: nginx:latest
           ports:
             - containerPort: 80
+          envFrom:
+            - configMapRef:
+                name: webapp-config
+            - secretRef:
+                name: webapp-secret
