--- a/overlays/staging/kustomization.yaml
+++ b/overlays/staging/kustomization.yaml
@@ -1,6 +1,13 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+
 resources:
   - ../../base
-patchesStrategicMerge:
-  - patch.yaml
+  - configmap.yaml
+  - secret.yaml
+
+patches:
+  - path: patch.yaml
+    target:
+      kind: Deployment
+      name: webapp-deployment
