Added final documentation for Kubernetes Kustomize project

--- a/overlays/dev/kustomization.yaml
+++ b/overlays/dev/kustomization.yaml
@@ -9,3 +9,18 @@ patches:
     target:
       kind: Deployment
       name: webapp-deployment
+
+configMapGenerator:
+  - name: dev-config
+    literals:
+      - LOG_LEVEL=DEBUG
+      - FEATURE_FLAG=true
+
+secretGenerator:
+  - name: dev-secret
+    literals:
+      - DB_PASSWORD=devPassword123
+      - API_KEY=devApiKey456
+
+generatorOptions:
+  disableNameSuffixHash: true
